--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
             <div class="copyrightdiv" >
                 <p id="legaltxt">Copyright 2022 KTM Sportmotorcycle GmbH, all rights reserved</p>
-                <img class="uparrow" src="/KTM IMAGES/uppp.png" alt="">
+                <img class="uparrow" src="./KTM IMAGES/uppp.png" alt="">
                 <a id="toptxt" href="#">BACK TO TOP</a>
 
             
